"""Donner Editor: in-tree migration of the external `donner-editor` prototype.

This package is the destination for the editor migration described in
`docs/design_docs/0020-editor.md`. Milestone 1 landed the package skeleton,
build-system foundation, and dependency wiring;
subsequent milestones add
the actual editor source.

The editor builds as part of default `bazel test //...` on supported hosts —
there is no `--config=editor` feature flag. Heavy dependencies (imgui, glfw,
tracy, emsdk, pixelmatch-cpp17) are kept out of BCR consumer dependency
graphs via `dev_dependency = True` in `MODULE.bazel`.
"""

load("@bazel_skylib//lib:selects.bzl", "selects")
load("//build_defs:embed_resources.bzl", "embed_resources")
load("//build_defs:rules.bzl", "donner_cc_binary", "donner_cc_library", "donner_multi_transitioned_binary")

#Editor libraries are public so the  // examples:svg_viewer target (in the
#separate examples Bazel module) can depend on `: text_editor`.BCR
#consumers cannot transitively use the editor libraries because
#imgui / glfw / tracy are `dev_dependency = True` in MODULE.bazel and won't
#resolve outside dev builds.
package(default_visibility = ["//visibility:public"])

config_setting(
    name = "wasm_geode_enabled",
    flag_values = {
        "//donner/editor/wasm:enable_wasm": "true",
        "//donner/svg/renderer:renderer_backend": "geode",
    },
)

config_setting(
    name = "wasm_tiny_skia_enabled",
    flag_values = {
        "//donner/editor/wasm:enable_wasm": "true",
        "//donner/svg/renderer:renderer_backend": "tiny_skia",
    },
)

config_setting(
    name = "linux_tracy_enabled",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {
        "//build_defs:enable_tracy": "true",
    },
)

config_setting(
    name = "macos_tracy_enabled",
    constraint_values = ["@platforms//os:macos"],
    flag_values = {
        "//build_defs:enable_tracy": "true",
    },
)

exports_files(
    ["main.cc"],
    visibility = ["//donner/editor/wasm:__pkg__"],
)

donner_cc_library(
    name = "viewport_geometry",
    srcs = ["ViewportGeometry.cc"],
    hdrs = ["ViewportGeometry.h"],
    deps = [
        "//donner/base",
    ],
)

# Single source of truth for the editor render pane's screen↔document
# coordinate mapping, including zoom, pan, DPR, and the focal-point-preserving
# zoom math.
donner_cc_library(
    name = "viewport_state",
    srcs = ["ViewportState.cc"],
    hdrs = ["ViewportState.h"],
    deps = [
        "//donner/base",
    ],
)

# Geometry for the render pane's emulated canvas scrollbars: rails/thumbs
# representing the document extent relative to the viewport. Pure math over
# ViewportState — unit-testable headlessly.
donner_cc_library(
    name = "canvas_scrollbars",
    srcs = ["CanvasScrollbars.cc"],
    hdrs = ["CanvasScrollbars.h"],
    deps = [
        ":viewport_state",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "selection_aabb",
    srcs = ["SelectionAabb.cc"],
    hdrs = ["SelectionAabb.h"],
    deps = [
        "//donner/base",
        "//donner/base/parser",
        "//donner/svg",
    ],
)

# Viewport SVG export. Content-only: copies source SVG children into a clipped
# group cropped to the viewport, with an optional overlay group for the
# serialized selection chrome.
donner_cc_library(
    name = "viewport_svg_export",
    srcs = ["ViewportSvgExport.cc"],
    hdrs = ["ViewportSvgExport.h"],
    deps = [
        ":overlay_renderer",
        ":viewport_state",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "selection_transform_handles",
    srcs = ["SelectionTransformHandles.cc"],
    hdrs = ["SelectionTransformHandles.h"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "rotate_cursor_set",
    srcs = ["RotateCursorSet.cc"],
    hdrs = ["RotateCursorSet.h"],
    deps = [
        ":pan_closed_cursor_svg",
        ":pan_cursor_svg",
        ":path_modify_cursor_svg",
        ":pen_cursor_svg",
        ":rotate_cursor_svg",
        ":scale_cursor_svg",
        ":select_cursor_svg",
        ":selection_transform_handles",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/parser",
        "//donner/svg/renderer",
    ] + select({
        ":wasm_tiny_skia_enabled": [
            "//third_party/emscripten-glfw",
        ],
        "//conditions:default": [
            "@glfw",
        ],
    }),
)

donner_cc_library(
    name = "source_selection",
    srcs = ["SourceSelection.cc"],
    hdrs = ["SourceSelection.h"],
    deps = [
        ":text_editor",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "reference_fanout",
    hdrs = ["ReferenceFanout.h"],
    deps = [],
)

donner_cc_library(
    name = "focus_view",
    srcs = ["FocusView.cc"],
    hdrs = ["FocusView.h"],
    deps = [
        ":reference_fanout",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "style_source_annotations",
    srcs = ["StyleSourceAnnotations.cc"],
    hdrs = ["StyleSourceAnnotations.h"],
    deps = [
        ":attribute_writeback",
        ":flash_decorations",
        ":reference_fanout",
        "//donner/base",
        "//donner/base/xml",
        "//donner/css",
        "//donner/svg",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "flash_decorations",
    srcs = ["FlashDecorations.cc"],
    hdrs = ["FlashDecorations.h"],
    deps = [],
)

donner_cc_library(
    name = "soft_wrap",
    srcs = ["SoftWrap.cc"],
    hdrs = ["SoftWrap.h"],
    deps = [],
)

donner_cc_library(
    name = "rope_simulation",
    srcs = ["RopeSimulation.cc"],
    hdrs = ["RopeSimulation.h"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "render_pane_gesture",
    srcs = ["RenderPaneGesture.cc"],
    hdrs = ["RenderPaneGesture.h"],
    deps = [
        ":viewport_state",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "pinch_event_monitor",
    srcs = ["PinchEventMonitor.cc"] + select({
        "@platforms//os:macos": [],
        "//conditions:default": ["PinchEventMonitorStub.cc"],
    }),
    hdrs = ["PinchEventMonitor.h"],
    deps = [
        ":render_pane_gesture",
    ],
)

objc_library(
    name = "pinch_event_monitor_macos",
    srcs = ["PinchEventMonitorMac.mm"],
    copts = ["-fblocks"],
    sdk_frameworks = ["Cocoa"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":pinch_event_monitor",
        "@glfw",
    ],
)

donner_cc_library(
    name = "file_dialog_state",
    srcs = ["FileDialogState.cc"],
    hdrs = ["FileDialogState.h"],
    deps = [],
)

donner_cc_library(
    name = "native_file_dialog",
    srcs = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["NativeFileDialogStub.cc"],
    }),
    hdrs = ["NativeFileDialog.h"],
    deps = [
        ":file_dialog_state",
    ],
)

objc_library(
    name = "native_file_dialog_macos",
    srcs = ["NativeFileDialogMac.mm"],
    sdk_frameworks = [
        "Cocoa",
        "UniformTypeIdentifiers",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":native_file_dialog",
        "@glfw",
    ],
)

donner_cc_library(
    name = "native_window_chrome",
    srcs = ["NativeWindowChrome.cc"] + select({
        "@platforms//os:macos": [],
        "//conditions:default": ["NativeWindowChromeStub.cc"],
    }),
    hdrs = ["NativeWindowChrome.h"],
    deps = [],
)

objc_library(
    name = "native_window_chrome_macos",
    srcs = ["NativeWindowChromeMac.mm"],
    sdk_frameworks = ["Cocoa"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":native_window_chrome",
        "@glfw",
    ],
)

donner_cc_library(
    name = "native_dialog_coordinator",
    srcs = ["NativeDialogCoordinator.cc"],
    hdrs = ["NativeDialogCoordinator.h"],
    deps = [
        ":file_dialog_state",
        ":native_file_dialog",
    ],
)

donner_cc_library(
    name = "command_queue",
    srcs = ["CommandQueue.cc"],
    hdrs = [
        "CommandQueue.h",
        "EditorCommand.h",
    ],
    deps = [
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "async_svg_document",
    srcs = ["AsyncSVGDocument.cc"],
    hdrs = ["AsyncSVGDocument.h"],
    deps = [
        ":command_queue",
        ":editor_parse_options",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/compositor",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "source_diagnostics",
    srcs = ["SourceDiagnostics.cc"],
    hdrs = ["SourceDiagnostics.h"],
    deps = [
        ":flash_decorations",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "source_diagnostics_panel",
    srcs = ["SourceDiagnosticsPanel.cc"],
    hdrs = ["SourceDiagnosticsPanel.h"],
    deps = [
        ":imgui_headers",
        ":source_diagnostics",
        "@imgui",
    ],
)

donner_cc_library(
    name = "source_structural_move",
    srcs = ["SourceStructuralMove.cc"],
    hdrs = ["SourceStructuralMove.h"],
    deps = [
        ":editor_app",
        ":flash_decorations",
        ":lock_state",
        ":source_selection",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "shape_clipboard_payload",
    srcs = ["ShapeClipboardPayload.cc"],
    hdrs = ["ShapeClipboardPayload.h"],
    deps = [
        "//donner/base",
        "//donner/base/parser",
    ],
)

donner_cc_library(
    name = "shape_clipboard_commands",
    srcs = ["ShapeClipboardCommands.cc"],
    hdrs = ["ShapeClipboardCommands.h"],
    deps = [
        ":editor_parse_options",
        ":shape_clipboard_payload",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "editor_parse_options",
    hdrs = ["EditorParseOptions.h"],
    deps = ["//donner/svg/parser"],
)

donner_cc_library(
    name = "text_patch",
    srcs = ["TextPatch.cc"],
    hdrs = ["TextPatch.h"],
    deps = [
        "//donner/base",
    ],
)

# Convert Text to Outlines. Pure
# geometry->SVG conversion: resolves placed glyph outlines via the
# renderer-facing text geometry (`SVGTextElement::convertToPath`) and splices a
# replacement outline `<g>` into the document source. Editor-command-agnostic so
# it can be unit-tested headlessly.
donner_cc_library(
    name = "text_to_outlines",
    srcs = ["TextToOutlines.cc"],
    hdrs = ["TextToOutlines.h"],
    deps = [
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "attribute_writeback",
    srcs = ["AttributeWriteback.cc"],
    hdrs = ["AttributeWriteback.h"],
    deps = [
        ":text_patch",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "transform_syntax_preserving",
    srcs = ["TransformSyntaxPreserving.cc"],
    hdrs = ["TransformSyntaxPreserving.h"],
    deps = [
        "//donner/base",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "async_renderer",
    srcs = ["AsyncRenderer.cc"],
    hdrs = ["AsyncRenderer.h"],
    deps = [
        ":overlay_renderer",
        ":tracy_wrapper",
        ":viewport_state",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/compositor",
        "//donner/svg/renderer",
    ],
)

donner_cc_library(
    name = "frame_cost_breakdown",
    hdrs = ["FrameCostBreakdown.h"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "frame_miss_telemetry",
    srcs = ["FrameMissTelemetry.cc"],
    hdrs = ["FrameMissTelemetry.h"],
    deps = [
        ":frame_cost_breakdown",
    ],
)

donner_cc_library(
    name = "gl_texture_cache",
    srcs = ["GlTextureCache.cc"],
    hdrs = ["GlTextureCache.h"],
    defines = select({
        ":wasm_geode_enabled": ["DONNER_EDITOR_WGPU"],
        "//donner/svg/renderer:renderer_backend_geode": ["DONNER_EDITOR_WGPU"],
        "//conditions:default": [],
    }),
    deps = [
        ":async_renderer",
        ":frame_cost_breakdown",
        ":imgui_headers",
        ":tracy_wrapper",
        "//donner/base",
        "//donner/svg",
    ] + select({
        ":wasm_geode_enabled": [
            "//donner/svg/renderer:renderer_geode",
            "//third_party/emscripten-glfw",
            "@imgui//:imgui_wgpu_backend",
        ],
        ":wasm_tiny_skia_enabled": [
            "//third_party/emscripten-glfw",
        ],
        "//donner/svg/renderer:renderer_backend_geode": [
            "//donner/svg/renderer:renderer_geode",
            "@imgui//:imgui_wgpu_backend",
        ],
        "//conditions:default": [
            "//third_party/glad",
        ],
    }),
)

donner_cc_library(
    name = "editor_input_bridge",
    srcs = ["EditorInputBridge.cc"],
    hdrs = ["EditorInputBridge.h"],
    deps = [
        ":pinch_event_monitor",
        ":render_pane_gesture",
        "//donner/editor/gui:editor_window",
    ] + select({
        ":wasm_tiny_skia_enabled": [
            "//third_party/emscripten-glfw",
        ],
        "@platforms//os:macos": [
            ":pinch_event_monitor_macos",
            "@glfw",
        ],
        "@platforms//os:linux": [
            "@glfw",
        ],
        "//conditions:default": [],
    }),
)

donner_cc_library(
    name = "imgui_headers",
    hdrs = [
        "ImGuiBackendIncludes.h",
        "ImGuiIncludes.h",
        "ImGuiInternalIncludes.h",
    ],
    deps = [
        "@imgui",
    ],
)

# Donner editor design language (design doc 0054): the single source of truth
# for the editor chrome palette, spacing grid, rounding, and control metrics.
donner_cc_library(
    name = "editor_theme",
    srcs = ["EditorTheme.cc"],
    hdrs = ["EditorTheme.h"],
    deps = [
        ":imgui_headers",
        "//donner/css",
        "@imgui",
    ],
)

donner_cc_library(
    name = "drag_coalesce",
    hdrs = ["DragCoalesce.h"],
    deps = [],
)

donner_cc_library(
    name = "keyboard_shortcut_policy",
    hdrs = ["KeyboardShortcutPolicy.h"],
    deps = [],
)

donner_cc_library(
    name = "document_save",
    srcs = ["DocumentSave.cc"],
    hdrs = ["DocumentSave.h"],
    deps = [],
)

donner_cc_library(
    name = "xml_autocomplete",
    srcs = ["XmlAutocomplete.cc"],
    hdrs = ["XmlAutocomplete.h"],
    deps = [
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
        "//donner/svg/properties:property_parsing",
    ],
)

donner_cc_library(
    name = "document_sync_controller",
    srcs = ["DocumentSyncController.cc"],
    hdrs = ["DocumentSyncController.h"],
    deps = [
        ":attribute_writeback",
        ":editor_app",
        ":imgui_headers",
        ":select_tool",
        ":source_diagnostics",
        ":source_edit_intent",
        ":source_sync",
        ":text_editor",
        ":text_patch",
        ":transform_syntax_preserving",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "viewport_interaction_controller",
    srcs = ["ViewportInteractionController.cc"],
    hdrs = ["ViewportInteractionController.h"],
    deps = [
        ":frame_cost_breakdown",
        ":imgui_headers",
        ":render_pane_gesture",
        ":tool",
        ":viewport_state",
        "//donner/base",
        "@imgui",
    ],
)

donner_cc_library(
    name = "menu_bar_presenter",
    srcs = ["MenuBarPresenter.cc"],
    hdrs = ["MenuBarPresenter.h"],
    deps = [
        ":editor_theme",
        ":imgui_headers",
        "@imgui",
    ],
)

donner_cc_library(
    name = "text_format_bar_presenter",
    srcs = ["TextFormatBarPresenter.cc"],
    hdrs = ["TextFormatBarPresenter.h"],
    deps = [
        ":editor_app",
        ":editor_theme",
        ":imgui_headers",
        "//donner/base",
        "//donner/base/parser",
        "//donner/svg",
        "//donner/svg/resources:font_catalog_types",
        "@imgui",
    ],
)

donner_cc_library(
    name = "embedded_svg_icon",
    srcs = ["EmbeddedSvgIcon.cc"],
    hdrs = ["EmbeddedSvgIcon.h"],
    deps = [
        "//donner/base",
        "//donner/svg",
        "//donner/svg/parser",
        "//donner/svg/renderer",
        "//donner/svg/renderer:renderer_interface",
    ],
)

# Editor-authored SVG icon assets (Donner-rendered through EmbeddedSvgIcon).
# W6's cursor/icon suite folds these into the shared icon family; see
# donner/editor/icons/. Keep new editor icons here rather than reusing the
# third-party Bootstrap set.
embed_resources(
    name = "editor_icons",
    header_output = "embed_resources/EditorIcons.h",
    resources = {
        "kEditorChevronDownSvg": "icons/chevron-down.svg",
        "kEditorChevronSvg": "icons/chevron.svg",
    },
    visibility = ["//donner:__subpackages__"],
)

# Shared tree-disclosure chevron rendered from the editor_icons chevron asset,
# used by both the inspector tree (SidebarPresenter) and the LayersPanel so the
# two trees share one disclosure style.
donner_cc_library(
    name = "disclosure_chevron",
    srcs = ["DisclosureChevron.cc"],
    hdrs = ["DisclosureChevron.h"],
    deps = [
        ":editor_icons",
        ":embedded_svg_icon",
        ":imgui_headers",
        "//donner/base",
        "//donner/svg/renderer:renderer_interface",
        "@imgui",
    ],
)

donner_cc_library(
    name = "toolbar_icon_set",
    srcs = ["ToolbarIconSet.cc"],
    hdrs = ["ToolbarIconSet.h"],
    deps = [
        ":embedded_svg_icon",
        ":imgui_headers",
        ":tool_icons_svg",
        "//donner/base",
        "//donner/svg/renderer:renderer_interface",
    ],
)

donner_cc_library(
    name = "sidebar_presenter",
    srcs = ["SidebarPresenter.cc"],
    hdrs = ["SidebarPresenter.h"],
    deps = [
        ":attribute_writeback",
        ":command_queue",
        ":disclosure_chevron",
        ":editor_app",
        ":editor_theme",
        ":embedded_svg_icon",
        ":imgui_headers",
        ":lock_state",
        ":undo_timeline",
        ":viewport_state",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
        "//donner/svg/renderer:renderer_interface",
        "//third_party/bootstrap-icons:bootstrap_icons",
        "@imgui",
    ],
)

donner_cc_library(
    name = "layer_inspector_diagnostics",
    srcs = ["LayerInspectorDiagnostics.cc"],
    hdrs = ["LayerInspectorDiagnostics.h"],
    deps = [
        "//donner/base",
        "//donner/svg/compositor",
    ],
)

donner_cc_library(
    name = "compositor_debug_panel",
    srcs = ["CompositorDebugPanel.cc"],
    hdrs = ["CompositorDebugPanel.h"],
    defines = select({
        ":wasm_geode_enabled": ["DONNER_EDITOR_WGPU"],
        "//donner/svg/renderer:renderer_backend_geode": ["DONNER_EDITOR_WGPU"],
        "//conditions:default": [],
    }),
    deps = [
        ":editor_theme",
        ":gl_texture_cache",
        ":imgui_headers",
        ":layer_inspector_diagnostics",
        "//donner/base",
        "//donner/svg/compositor",
        "@imgui",
    ] + select({
        ":wasm_geode_enabled": [
            "//donner/svg/renderer:renderer_geode",
            "//third_party/emscripten-glfw",
            "@imgui//:imgui_wgpu_backend",
        ],
        ":wasm_tiny_skia_enabled": [
            "//third_party/emscripten-glfw",
        ],
        "//donner/svg/renderer:renderer_backend_geode": [
            "//donner/svg/renderer:renderer_geode",
            "@imgui//:imgui_wgpu_backend",
        ],
        "//conditions:default": [
            "//third_party/glad",
        ],
    }),
)

donner_cc_library(
    name = "dialog_presenter",
    srcs = ["DialogPresenter.cc"],
    hdrs = ["DialogPresenter.h"],
    deps = [
        ":editor_theme",
        ":imgui_headers",
        "@imgui",
    ],
)

donner_cc_library(
    name = "presented_frame_composer",
    srcs = ["PresentedFrameComposer.cc"],
    hdrs = ["PresentedFrameComposer.h"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "render_pane_presenter",
    srcs = ["RenderPanePresenter.cc"],
    hdrs = ["RenderPanePresenter.h"],
    deps = [
        ":gl_texture_cache",
        ":imgui_headers",
        ":menu_bar_presenter",
        ":presented_frame_composer",
        ":select_tool",
        ":selection_aabb",
        ":viewport_interaction_controller",
        "//donner/base",
        "@imgui",
    ],
)

donner_cc_library(
    name = "presentation_render_scheduler",
    srcs = ["PresentationRenderScheduler.cc"],
    hdrs = ["PresentationRenderScheduler.h"],
    deps = [
        ":async_renderer",
        ":composited_presentation",
        ":select_tool",
        "//donner/base",
        "//donner/svg/compositor",
    ],
)

donner_cc_library(
    name = "render_coordinator",
    srcs = ["RenderCoordinator.cc"],
    hdrs = ["RenderCoordinator.h"],
    deps = [
        ":async_renderer",
        ":composited_presentation",
        ":frame_cost_breakdown",
        ":gl_texture_cache",
        ":overlay_renderer",
        ":presentation_render_scheduler",
        ":select_tool",
        ":selection_aabb",
        ":tracy_wrapper",
        ":viewport_interaction_controller",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "editor_shell_layout",
    srcs = ["EditorShellLayout.cc"],
    hdrs = ["EditorShellLayout.h"],
    deps = [],
)

donner_cc_library(
    name = "editor_dock_layout",
    srcs = ["EditorDockLayout.cc"],
    hdrs = ["EditorDockLayout.h"],
    deps = [
        ":imgui_headers",
        "@imgui",
    ],
)

donner_cc_library(
    name = "editor_shell",
    srcs = [
        "EditorShell.cc",
        "EditorShellPresentation.cc",
        "EditorShellPresentation.h",
        "FillStrokeWidget.cc",
    ],
    hdrs = [
        "EditorShell.h",
        "EditorShellInternal.h",
        "FillStrokeWidget.h",
    ],
    defines = select({
        ":wasm_geode_enabled": ["DONNER_EDITOR_WGPU"],
        "//donner/svg/renderer:renderer_backend_geode": ["DONNER_EDITOR_WGPU"],
        "//conditions:default": [],
    }),
    deps = [
        ":attribute_writeback",
        ":canvas_scrollbars",
        ":clipboard_interface",
        ":compositor_debug_panel",
        ":dialog_presenter",
        ":document_save",
        ":document_sync_controller",
        ":drag_coalesce",
        ":editor_app",
        ":editor_dock_layout",
        ":editor_input_bridge",
        ":editor_sample_catalog",
        ":editor_shell_layout",
        ":editor_theme",
        ":focus_view",
        ":frame_cost_breakdown",
        ":frame_miss_telemetry",
        ":gl_texture_cache",
        ":imgui_clipboard",
        ":imgui_headers",
        ":keyboard_shortcut_policy",
        ":layer_inspector_diagnostics",
        ":layer_tree_model",
        ":layers_panel",
        ":menu_bar_presenter",
        ":native_dialog_coordinator",
        ":native_window_chrome",
        ":pen_tool",
        ":render_coordinator",
        ":render_pane_presenter",
        ":rotate_cursor_set",
        ":sample_picker_presenter",
        ":select_tool",
        ":selection_transform_handles",
        ":shape_clipboard_commands",
        ":shape_clipboard_payload",
        ":sidebar_presenter",
        ":source_diagnostics_panel",
        ":source_selection",
        ":source_structural_move",
        ":style_source_annotations",
        ":text_editor",
        ":text_format_bar_presenter",
        ":text_inspector_panel",
        ":text_to_outlines",
        ":text_tool",
        ":tool_keybinding",
        ":toolbar_icon_set",
        ":tracy_wrapper",
        ":undo_timeline",
        ":viewport_interaction_controller",
        ":viewport_svg_export",
        ":xml_autocomplete",
        "//donner/base",
        "//donner/base/xml",
        "//donner/editor/gui:editor_window",
        "//donner/editor/repro:repro_recorder",
        "//donner/svg",
        "//donner/svg/renderer",
        "//donner/svg/renderer:renderer_interface",
        "//donner/svg/resources:font_catalog",
        "//donner/svg/resources:font_manager",
        "//third_party/fira-code",
        "//third_party/roboto",
        "@imgui",
    ] + select({
        ":wasm_geode_enabled": [
            "//donner/svg/renderer:renderer_geode",
        ],
        "//donner/svg/renderer:renderer_backend_geode": [
            "//donner/svg/renderer:renderer_geode",
        ],
        "//conditions:default": [],
    }) + select({
        "//donner/editor/wasm:wasm_enabled": [
            "//third_party/emscripten-glfw",
        ],
        "//conditions:default": [
            "@glfw",
        ],
    }) + select({
        "@platforms//os:macos": [
            ":native_file_dialog_macos",
            ":native_window_chrome_macos",
        ],
        "//conditions:default": [],
    }),
)

donner_cc_library(
    name = "source_edit_intent",
    hdrs = ["SourceEditIntent.h"],
)

donner_cc_library(
    name = "source_sync",
    srcs = ["SourceSync.cc"],
    hdrs = ["SourceSync.h"],
    deps = [
        ":editor_app",
        ":source_edit_intent",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "editor_app",
    srcs = ["EditorApp.cc"],
    hdrs = ["EditorApp.h"],
    deps = [
        ":async_svg_document",
        ":attribute_writeback",
        ":command_queue",
        ":lock_state",
        ":undo_timeline",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "tool",
    hdrs = ["Tool.h"],
    deps = [
        "//donner/base",
    ],
)

donner_cc_library(
    name = "composited_presentation",
    hdrs = ["CompositedPresentation.h"],
    deps = [
        ":select_tool",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "select_tool",
    srcs = ["SelectTool.cc"],
    hdrs = ["SelectTool.h"],
    deps = [
        ":attribute_writeback",
        ":command_queue",
        ":editor_app",
        ":imgui_headers",
        ":lock_state",
        ":selection_aabb",
        ":selection_transform_handles",
        ":tool",
        ":undo_timeline",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "pen_tool",
    srcs = ["PenTool.cc"],
    hdrs = ["PenTool.h"],
    deps = [
        ":command_queue",
        ":editor_app",
        ":tool",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/parser",
    ],
)

donner_cc_library(
    name = "text_tool",
    srcs = ["TextTool.cc"],
    hdrs = ["TextTool.h"],
    deps = [
        ":command_queue",
        ":editor_app",
        ":lock_state",
        ":selection_transform_handles",
        ":tool",
        "//donner/base",
        "//donner/base/parser",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "text_inspector_panel",
    srcs = ["TextInspectorPanel.cc"],
    hdrs = ["TextInspectorPanel.h"],
    deps = [
        ":command_queue",
        ":editor_app",
        ":imgui_headers",
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
        "//donner/svg/resources:font_catalog",
        "@imgui",
    ],
)

donner_cc_library(
    name = "overlay_renderer",
    srcs = ["OverlayRenderer.cc"],
    hdrs = ["OverlayRenderer.h"],
    deps = [
        ":editor_app",
        ":editor_theme",
        ":selection_aabb",
        ":selection_transform_handles",
        ":tracy_wrapper",
        "//donner/base",
        "//donner/css",
        "//donner/svg",
        "//donner/svg/renderer",
    ],
)

#Extracts the notice_editor.txt file from the license aggregation
#rule so it can be embedded into the editor binary.The rule produces
#both `.txt` and `.json`; we only want the text for the About dialog.
filegroup(
    name = "notice_editor_txt",
    srcs = ["//third_party/licenses:notice_editor"],
    output_group = "notice",
)

#Embed the NOTICE text into the editor binary. `  //donner/editor:notice`
#exposes `donner::embedded::kEditorNoticeText` as a
# `std::span<const unsigned char>`.The editor's Help → About dialog
#displays this.
embed_resources(
    name = "pan_closed_cursor_svg",
    header_output = "donner/editor/PanClosedCursorSvg.h",
    resources = {
        "kPanClosedCursorSvg": "art/pan_closed_cursor.svg",
    },
)

embed_resources(
    name = "pan_cursor_svg",
    header_output = "donner/editor/PanCursorSvg.h",
    resources = {
        "kPanCursorSvg": "art/pan_cursor.svg",
    },
)

embed_resources(
    name = "pen_cursor_svg",
    header_output = "donner/editor/PenCursorSvg.h",
    resources = {
        "kPenCursorSvg": "art/pen_cursor.svg",
        "kPenAddCursorSvg": "art/pen_add_cursor.svg",
        "kPenRemoveCursorSvg": "art/pen_remove_cursor.svg",
        "kPenCloseCursorSvg": "art/pen_close_cursor.svg",
    },
)

embed_resources(
    name = "rotate_cursor_svg",
    header_output = "donner/editor/RotateCursorSvg.h",
    resources = {
        "kRotateCursorSvg": "art/rotate_cursor.svg",
    },
)

embed_resources(
    name = "select_cursor_svg",
    header_output = "donner/editor/SelectCursorSvg.h",
    resources = {
        "kSelectCursorSvg": "art/select_cursor.svg",
    },
)

embed_resources(
    name = "scale_cursor_svg",
    header_output = "donner/editor/ScaleCursorSvg.h",
    resources = {
        "kScaleCursorSvg": "art/scale_cursor.svg",
    },
)

embed_resources(
    name = "path_modify_cursor_svg",
    header_output = "donner/editor/PathModifyCursorSvg.h",
    resources = {
        "kPathModifyCursorSvg": "art/path_modify_cursor.svg",
    },
)

embed_resources(
    name = "tool_icons_svg",
    header_output = "donner/editor/ToolIconsSvg.h",
    resources = {
        "kToolSelectIconSvg": "art/tool_select_icon.svg",
        "kToolPenIconSvg": "art/tool_pen_icon.svg",
        "kToolTextIconSvg": "art/tool_text_icon.svg",
    },
)

embed_resources(
    name = "notice",
    header_output = "donner/editor/Notice.h",
    resources = {
        "kEditorNoticeText": ":notice_editor_txt",
    },
)

embed_resources(
    name = "editor_splash",
    header_output = "donner/editor/EditorSplash.h",
    resources = {
        "kEditorSplashSvg": "//:donner_splash.svg",
    },
)

donner_cc_library(
    name = "editor_sample_catalog",
    srcs = ["EditorSampleCatalog.cc"],
    hdrs = ["EditorSampleCatalog.h"],
    deps = [":editor_splash"],
)

donner_cc_library(
    name = "sample_picker_presenter",
    srcs = ["SamplePickerPresenter.cc"],
    hdrs = ["SamplePickerPresenter.h"],
    deps = [
        ":editor_sample_catalog",
        ":editor_theme",
        ":imgui_headers",
        "@imgui",
    ],
)

donner_cc_library(
    name = "editor_notice_inputs",
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":editor_shell",
    ],
)

#The full Donner editor implementation.The public `: editor` target below
#applies the Geode transition so `bazel run  // donner/editor` uses the same
#backend that editor performance work targets without requiring `--config = geode`.
donner_cc_binary(
    name = "editor_impl",
    srcs = ["main.cc"],
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:private"],
    deps = [
        ":editor_shell",
        ":editor_splash",
        ":notice",
        ":tracy_wrapper",
        "//donner/base",
        "//donner/base:failure_signal_handler",
        "//donner/editor/gui:editor_window",
    ],
)

test_suite(
    name = "editor_lint",
    tests = [":editor_impl_lint"],
)

#The full Donner editor binary.Wires EditorApp + SelectTool +
#OverlayRenderer + TextEditor into an ImGui shell with a live source
#pane and a click - and-drag render pane.The minimal viewer demo lives
#at `  //examples:svg_viewer`.
#
#bazel run  // donner/editor -- donner_splash.svg
donner_multi_transitioned_binary(
    name = "editor",
    dep = ":editor_impl",
    renderer_backend = "geode",
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    text = "true",
    text_full = "false",
)

donner_cc_library(
    name = "text_buffer",
    hdrs = ["TextBuffer.h"],
    deps = [
        "//donner/base",
    ],
)

# Abstract clipboard interface + header-only InMemoryClipboard. No ImGui
# dependency — safe to link from headless unit tests.
donner_cc_library(
    name = "clipboard_interface",
    hdrs = [
        "ClipboardInterface.h",
        "InMemoryClipboard.h",
    ],
    deps = [],
)

#Production ClipboardInterface implementation backed by
#ImGui::GetClipboardText / SetClipboardText.This is the only
#editor target that touches ImGui clipboard APIs.
donner_cc_library(
    name = "imgui_clipboard",
    srcs = ["ImGuiClipboard.cc"],
    hdrs = ["ImGuiClipboard.h"],
    deps = [
        ":clipboard_interface",
        ":imgui_headers",
        "@imgui",
    ],
)

# Tool identity + display label + single-key shortcut table shared by the
# toolbar buttons, tooltips, and the keyboard shortcut handler. Pure header, no
# ImGui — unit-testable headlessly.
donner_cc_library(
    name = "tool_keybinding",
    hdrs = ["ToolKeybinding.h"],
    visibility = ["//visibility:public"],
)

# Conditional Tracy profiling macros. When `ENABLE_TRACY` is defined, the
# library pulls in the real Tracy client; otherwise the macros are no-ops.
# Native editor builds enable Tracy by default and may disable it with
# `--//build_defs:enable_tracy=false`; WASM and RE builds use the no-op wrapper.
donner_cc_library(
    name = "tracy_wrapper",
    hdrs = ["TracyWrapper.h"],
    defines = selects.with_or({
        (":linux_tracy_enabled", ":macos_tracy_enabled"): ["ENABLE_TRACY"],
        "//conditions:default": [],
    }),
    deps = selects.with_or({
        (":linux_tracy_enabled", ":macos_tracy_enabled"): [
            "@tracy//:tracy_client",
        ],
        "//conditions:default": [],
    }),
)

donner_cc_library(
    name = "text_editor_core",
    srcs = ["TextEditorCore.cc"],
    hdrs = ["TextEditorCore.h"],
    deps = [
        ":source_edit_intent",
        ":text_buffer",
        "//donner/base",
    ],
)

donner_cc_library(
    name = "text_editor",
    srcs = ["TextEditor.cc"],
    hdrs = ["TextEditor.h"],
    deps = [
        ":flash_decorations",
        ":focus_view",
        ":frame_cost_breakdown",
        ":imgui_headers",
        ":rope_simulation",
        ":soft_wrap",
        ":source_diagnostics",
        ":source_edit_intent",
        ":text_buffer",
        ":text_editor_core",
        "//donner/base",
        "@imgui",
    ],
)

donner_cc_library(
    name = "undo_timeline",
    srcs = ["UndoTimeline.cc"],
    hdrs = ["UndoTimeline.h"],
    deps = [
        ":attribute_writeback",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "lock_state",
    srcs = ["LockState.cc"],
    hdrs = ["LockState.h"],
    deps = [
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "layer_tree_model",
    srcs = ["LayerTreeModel.cc"],
    hdrs = ["LayerTreeModel.h"],
    deps = [
        ":editor_app",
        ":lock_state",
        "//donner/base",
        "//donner/svg",
    ],
)

donner_cc_library(
    name = "layers_panel",
    srcs = ["LayersPanel.cc"],
    hdrs = ["LayersPanel.h"],
    deps = [
        ":disclosure_chevron",
        ":editor_app",
        ":editor_theme",
        ":embedded_svg_icon",
        ":imgui_headers",
        ":layer_tree_model",
        ":lock_state",
        "//donner/base",
        "//donner/svg",
        "//donner/svg/renderer",
        "//donner/svg/renderer:renderer_interface",
        "//third_party/bootstrap-icons:bootstrap_icons",
        "@imgui",
    ],
)
