load("//build_defs:rules.bzl", "donner_cc_library", "donner_cc_test")
load("//build_defs:visibility.bzl", "donner_internal_visibility")

# donner::gpu - the Donner-owned GPU runtime (design doc 0053).
#
# Packets 2 and 3 of the design's change sequence: typed immutable descriptors, explicit
# Result/Status errors, move-only RAII generation-checked handles, deferred destruction by
# submission serial, submit-time re-validation of recorded commands, fail-closed validation
# shared by every backend, and the deterministic recording backend. Production rendering stays
# on the existing Geode path until the migration packets.

donner_cc_library(
    name = "gpu",
    srcs = [
        "CommandEncoder.cc",
        "Descriptors.cc",
        "Device.cc",
        "GpuError.cc",
        "RecordingDevice.cc",
    ],
    hdrs = [
        "CheckedArithmetic.h",
        "CommandEncoder.h",
        "Commands.h",
        "Descriptors.h",
        "Device.h",
        "GpuError.h",
        "GpuLimits.h",
        "GpuResult.h",
        "Handles.h",
        "RecordingDevice.h",
    ],
    visibility = donner_internal_visibility(),
    deps = [
        "//donner/base",
    ],
)

donner_cc_test(
    name = "gpu_tests",
    srcs = [
        "tests/CommandEncoder_tests.cc",
        "tests/DeviceValidation_tests.cc",
        "tests/GpuResult_tests.cc",
        "tests/GpuTestUtils.h",
        "tests/HandleLifetime_tests.cc",
        "tests/Handles_tests.cc",
        "tests/RecordingDevice_tests.cc",
        "tests/ResourceLifetime_tests.cc",
    ],
    deps = [
        ":gpu",
        "@com_google_gtest//:gtest_main",
    ],
)
