load("//build_defs:rules.bzl", "donner_cc_library", "donner_cc_test")
load("//build_defs:visibility.bzl", "donner_internal_visibility")

# donner::gpu - the Donner-owned GPU runtime (design doc 0053).
#
# Packets 2 and 3 of the design's change sequence: typed immutable descriptors, explicit
# Result/Status errors, move-only RAII generation-checked handles, deferred destruction by
# submission serial, submit-time re-validation of recorded commands, fail-closed validation
# shared by every backend, and the deterministic recording backend. Production rendering stays
# on the existing Geode path until the migration packets.

donner_cc_library(
    name = "gpu",
    srcs = [
        "CommandEncoder.cc",
        "Descriptors.cc",
        "Device.cc",
        "GpuError.cc",
        "RecordingDevice.cc",
    ],
    hdrs = [
        "CheckedArithmetic.h",
        "CommandEncoder.h",
        "Commands.h",
        "Descriptors.h",
        "Device.h",
        "GpuError.h",
        "GpuLimits.h",
        "GpuResult.h",
        "Handles.h",
        "RecordingDevice.h",
    ],
    visibility = donner_internal_visibility(),
    deps = [
        "//donner/base",
    ],
)

# The frozen-baseline scene shared by the design 0053 vertical slices: the
# black-box capture tool and the Metal and Vulkan solid-fill slice tests all
# consume identical inputs from this header.
donner_cc_library(
    name = "baseline_scene",
    testonly = 1,
    hdrs = ["tests/BaselineScene.h"],
    visibility = donner_internal_visibility(),
    deps = [
        "//donner/base",
        "//donner/css",
    ],
)

# gmock matchers and unwrap helpers shared by the model tests here and by backend/adapter
# conformance tests in other packages (e.g. the Geode wgpu adapter).
donner_cc_library(
    name = "gpu_test_utils",
    testonly = 1,
    hdrs = ["tests/GpuTestUtils.h"],
    visibility = donner_internal_visibility(),
    deps = [
        ":gpu",
        "@com_google_gtest//:gtest",
    ],
)

donner_cc_test(
    name = "gpu_tests",
    srcs = [
        "tests/CommandEncoder_tests.cc",
        "tests/DeviceValidation_tests.cc",
        "tests/GpuResult_tests.cc",
        "tests/HandleLifetime_tests.cc",
        "tests/Handles_tests.cc",
        "tests/RecordingDevice_tests.cc",
        "tests/ResourceLifetime_tests.cc",
    ],
    deps = [
        ":gpu",
        ":gpu_test_utils",
        "@com_google_gtest//:gtest_main",
    ],
)
